# myengine

./: .gitignore  .gitmodules  BUILD_GUIDE_STEP0.md  CMakeLists.txt  README.md  imgui.ini
Engine/: CMakeLists.txt  Engine.cpp
Engine/Animation/: AnimatedMesh.cpp  AnimatedMesh.h  AnimatedModelLoader.cpp  AnimatedModelLoader.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.cpp  Bone.h  CMakeLists.txt
Engine/Core/: Allocator.h  Application.cpp  Application.h  ApplicationEvent.h  CMakeLists.txt  Config.cpp  Config.h  Core.cpp  EngineMode.h  Event.h  FrameAllocator.cpp  FrameAllocator.h  Hash.h  ImGuiLayer.cpp  ImGuiLayer.h  KeyEvent.h  Layer.h  LayerStack.cpp  LayerStack.h  LinearAllocator.cpp  LinearAllocator.h  Log.cpp  Log.h  MemoryTracker.cpp  MemoryTracker.h  Module.cpp  Module.h  MouseEvent.h  PoolAllocator.cpp  PoolAllocator.h  StackAllocator.cpp  StackAllocator.h  StringUtils.h  TaskSystem.cpp  TaskSystem.h  UUID.cpp  UUID.h
Engine/ECS/: CMakeLists.txt  Component.h  Components.h  Entity.h  Registry.cpp  Registry.h  System.h  TransformSystem.h
Engine/Editor/: CMakeLists.txt  EditorCamera.cpp  EditorCamera.h  EditorLayer.cpp  EditorLayer.h  Panel.h
Engine/Editor/Panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
Engine/Math/: CMakeLists.txt  MathTypes.h  Transform.h
Engine/Particle/: CMakeLists.txt  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h
Engine/Platform/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  Input.h  Platform.cpp  PlatformInfo.cpp  PlatformInfo.h  Timer.cpp  Timer.h  Window.h  WindowsWindow.cpp  WindowsWindow.h
Engine/Rendering/: Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  RenderBackend.cpp  RenderBackend.h  Renderer.cpp  Renderer.h  Rendering.cpp  Shader.h  VertexArray.h
Engine/Rendering/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRenderBackend.cpp  OpenGLRenderBackend.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Engine/Rendering/Pass/: GeometryPass.cpp  GeometryPass.h  GrassPass.cpp  GrassPass.h  ParticlePass.cpp  ParticlePass.h  PostProcessPass.cpp  PostProcessPass.h  RenderPass.cpp  RenderPass.h  SkeletalAnimationPass.cpp  SkeletalAnimationPass.h  SkyPass.cpp  SkyPass.h  TerrainPass.cpp  TerrainPass.h  WaterPass.cpp  WaterPass.h
Engine/Rendering/RHI/: RHITypes.h
Engine/Resource/: Asset.cpp  Asset.h  AssetDatabase.cpp  AssetDatabase.h  AssetTypes.h  AssimpMeshLoader.cpp  AssimpMeshLoader.h  Mesh.cpp  Mesh.h  ResourceHandle.h  ResourceRegistry.h  Texture.h
Engine/Scene/: CMakeLists.txt  SceneNode.h
Engine/Scripting/: CMakeLists.txt  LuaBridge.cpp  LuaBridge.h  LuaVM.cpp  LuaVM.h  README.md  ScriptComponent.cpp  ScriptComponent.h  ScriptSystem.cpp  ScriptSystem.h
Runtime/: CMakeLists.txt  main.cpp
Runtime/Scripts/: Bouncer.lua  HelloWorld.lua  Orbiter.lua  Rotator.lua
Runtime/Shaders/SkeletalAnimation/: skeletal.fs  skeletal.vs
Tests/: TestLuaScripting.cpp  TestSkeletalAnimation.cpp
build-root/Engine/Animation/EngineAnimation.dir/Debug/EngineAnimation.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  EngineAnimation.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-root/Engine/Core/EngineCore.dir/Debug/EngineCore.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  EngineCore.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-root/Engine/ECS/EngineECS.dir/Debug/EngineECS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  EngineECS.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-root/Engine/Editor/EngineEditor.dir/Debug/EngineEditor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  EngineEditor.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-root/Engine/MyEngine.dir/Debug/: MyEngine.lib.recipe
build-root/Engine/MyEngine.dir/Debug/MyEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  MyEngine.lastbuildstate
build-root/Engine/Particle/EngineParticle.dir/Debug/EngineParticle.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  EngineParticle.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-root/Runtime/MyEngineRuntime.dir/Debug/: MyEngine.exe.recipe
build-root/Runtime/MyEngineRuntime.dir/Debug/MyEngineRuntime.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  MyEngineRuntime.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-root/TestSkeletalAnimation.dir/Debug/: TestSkeletalAnimation.exe.recipe
build-root/TestSkeletalAnimation.dir/Debug/TestSkel.075D355A.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-root/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build-root/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
build-root/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
(+33 files in other folders)
